# biomedicaldataio

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindKLB.cmake  FindNIfTI.cmake  FindTEEM.cmake  FindTIFF.cmake
src/: CMakeLists.txt  biomedicaldataio.h  dataio.cpp  dataio.h
test/: CMakeLists.txt  array2raw.cpp  imageReadWrite.cpp
