
#
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# The default is OFF
OPTION ( BUILD_SHARED_LIBS "Toggle building shared libraries")

# sources
SET( biomedicaldataio_sources

# header files
    ${PROJECT_SOURCE_DIR}/src/dataio.h
    ${PROJECT_SOURCE_DIR}/src/biomedicaldataio.h

# source files
    ${PROJECT_SOURCE_DIR}/src/dataio.cpp
)

# TIFF
FIND_PACKAGE( TIFF REQUIRED)
IF(TIFF_FOUND)
SET(CMAKE_REQUIRED_LIBRARIES ${TIFF_LIBRARIES})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
ENDIF(TIFF_FOUND)

# NIfTI
FIND_PACKAGE( NIfTI REQUIRED)
IF(NIfTI_FOUND)
SET(CMAKE_REQUIRED_LIBRARIES ${NIfTI_LIBRARIES})
INCLUDE_DIRECTORIES(${NIfTI_INCLUDE_DIR})
ENDIF(NIfTI_FOUND)

# KLB
FIND_PACKAGE( KLB REQUIRED)
IF(KLB_FOUND)
SET(CMAKE_REQUIRED_LIBRARIES ${KLB_LIBRARIES})
INCLUDE_DIRECTORIES(${KLB_INCLUDE_DIR})
ENDIF(KLB_FOUND)

# system settings
IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3 -lm -fopenmp" CACHE STRING "CXX Compiler Flags" FORCE)
ADD_DEFINITIONS(-DUse_OpenMP)
ENDIF()

IF(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
SET(CMAKE_CXX_FLAGS "-std=c++11 -O3" CACHE STRING "CXX Compiler Flags" FORCE)
SET(CMAKE_MACOSX_RPATH 1)
ENDIF()


IF (BUILD_SHARED_LIBS)

# biomedicaldataio library
ADD_LIBRARY(biomedicaldataio SHARED ${biomedicaldataio_sources})
TARGET_LINK_LIBRARIES(biomedicaldataio ${TIFF_LIBRARIES} ${NIfTI_LIBRARIES})
SET(BioMedicalDataIO_LIBRARY biomedicaldataio CACHE STRING "" FORCE)

# install
INSTALL(TARGETS biomedicaldataio LIBRARY DESTINATION lib)
INSTALL(FILES biomedicaldataio.h DESTINATION include)

ELSE (BUILD_SHARED_LIBS)

# biomedicaldataio library
ADD_LIBRARY(biomedicaldataio ${biomedicaldataio_sources})
TARGET_LINK_LIBRARIES(biomedicaldataio ${TIFF_LIBRARIES} ${NIfTI_LIBRARIES} ${KLB_LIBRARIES})
SET(BioMedicalDataIO_LIBRARY biomedicaldataio CACHE STRING "" FORCE)

# install
INSTALL(TARGETS biomedicaldataio ARCHIVE DESTINATION lib)
INSTALL(FILES biomedicaldataio.h DESTINATION include)

ENDIF (BUILD_SHARED_LIBS)


